2001-10-17 Mark McLoughlin  <mark@skynet.ie>

	* gnome-preferences.c: add comments to indicate which
	ones have been replaced by gconf keys.

Sun Oct 14 20:12:14 2001  George Lebl <jirka@5z.com>

	* gnome-program.c: popt IS the evil incarnate.  There is no
	  reasonable way to pass data to the callbacks.  And we don't want
	  to modify or use the options.  So add a hack that sets
	  a data on the context with the GnomeProgram, so in a callback
	  if you want to get the GnomeProgram object you'd do
	  g_dataset_get_data (popt_context, "GnomeProgram");  Evil?
	  yes.  And it's the only way to do this sanely.

2001-10-10  Glynn Foster <glynn.foster@sun.com>

	* gnome-gconf.c: Change to use proper gconf key for desktop wide
	  settings [ie. /desktop/gnome]

Tue Oct 09 18:22:34 2001  George Lebl <jirka@5z.com>

	* libgnome.schema, Makefile.am: schemas for preferences, this
	  replaces gnome-preferences API which is supposed to be gone
	  (And will be soon)

	* gnome-macros.h: also add prototypes for class_init and
	  instance_init to the macro, so that they can be just declared
	  sometime later without having to mess with forward declarations

2001-10-06 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-program.c, gnome-triggers.c, gnome-triggers.h:
	* gnome-util.c, gnome-help.h, gnome-uri.h: Documentation updates
	and fiddling.

2001-10-05 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-config.c, gnome-gconf.c, gnome-help.c, gnome-program.c:
	* gnome-score.c, gnome-sound.c, gnome-url.c: Documentation
	updates.

2001-10-04 Malcolm Tredinnick <malcolm@commsecure.com.au>

	* gnome-program.c, gnome-exec.c, gnome-18n.c: Documentation
	updates.

Sun Sep 30 14:41:52 2001  George Lebl <jirka@5z.com>

	* gnome-program.c: free data on finalize, copy argv stuff, and a bit
	  of cleanup

2001-09-28 Mark McLoughlin  <mark@skynet.ie>

	* libgnome/gnome-program.h: add lame GNOME_PARAM_NONE
	for clarity.

	* libgnome/gnome-init.c