@@ -1,3 +1,9 @@
+Wed Oct 17 11:25:38 2001  George Lebl <jirka@5z.com>
+
+	* gnome-preferences.c:  We really don't want people to use
+	  gnome-preferences, so make it say evil things to the developer
+	  at runtime
+
 2001-10-17 Mark McLoughlin  <mark@skynet.ie>
 
 	* gnome-preferences.c: add comments to indicate which
